--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
     <head lang="English">
         <title>Project 1</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>       
-        <p>test</p>
+    <body>   
+        <nav> 
+            <ul class="navlinks">
+                <li class="navlink"><a href="*">Design</a></li>
+                <li class="navlink"><a href="*">Illustrations</a></li>
+                <li class="navlink"><a href="*">Professional</a></li>
+                <li class="navlink"><a href="*">Contact</a></li>
+            </ul>
+        </nav> 
+        <div>sample text</div> 
+        <footer>
+            <h2>Bottom</h2>
+        </footer> 
     </body>
 </html>
