--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
     <head lang="English">
         <title>Project 1</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>   
         <nav> 
             <ul class="navlinks">
-                <li class="navlink"><a href="*">Design</a></li>
-                <li class="navlink"><a href="*">Illustrations</a></li>
-                <li class="navlink"><a href="*">Professional</a></li>
-                <li class="navlink"><a href="*">Contact</a></li>
+                <li class="navlink"><a href="design.html">Design</a></li>
+                <li class="navlink"><a href="illustrations.html">Illustrations</a></li>
+                <li class="navlink"><a href="professional.html">Professional</a></li>
+                <li class="navlink"><a href="contact.html">Contact</a></li>
             </ul>
         </nav> 
         <div>sample text</div> 
