weird git error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li class="navlink"><a href="contact.html">Contact</a></li>
             </ul>
         </nav> 
-        <div>sample text</div> 
+        <div>Sample text</div> 
         <footer>
             <h2>Bottom</h2>
         </footer> 
