--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head lang="English">
-        <title>Project 1</title>
-        <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <title>Nick Loeloff</title>
+    <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>   
-        <nav> 
-            <ul class="navlinks">
-                <li class="navlink"><a href="design.html">Design</a></li>
-                <li class="navlink"><a href="illustrations.html">Illustrations</a></li>
-                <li class="navlink"><a href="professional.html">Professional</a></li>
-                <li class="navlink"><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav> 
-        <div>Sample text</div> 
+    <body>  
+        <header>
+            <nav> 
+                <ul class="navlinks">
+                    <li class="navlink"><a href="design.html">Design</a></li>
+                    <li class="navlink"><a href="illustrations.html">Illustrations</a></li>
+                    <li class="navlink"><a href="professional.html">Professional</a></li>
+                    <li class="navlink"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav> 
+        </header>
+        <main>
+            <div class="middler">
+                <h1><a href="index.html">Nick Loeloff</a></h1>
+            </div>
+            <div class="image-middler">
+                <img src="images/green-guitar.JPG" alt="Silhouette of An Amp Cord">
+            </div>
+        </main>
         <footer>
-            <h2>Bottom</h2>
+            <h2>Silhouette of the Guitarist</h2>
         </footer> 
     </body>
 </html>
