images added, resizing does not work still

--- a/design.html
+++ b/design.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>Design</title>
+        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -18,10 +19,20 @@
                 </ul>
             </nav> 
         </header>
-        <main>
             <div class="middler">
                 <h1><a href="index.html">Nick Loeloff</a></h1>
             </div>
-        </main>
+            <div class="gallery">
+                <img src="images/Europa.jpg" alt="">
+                <img src="images/light.png" alt="">
+                <img src="images/link.PNG" alt="">
+                <img src="images/misc.png" alt="">
+                <img src="images/ProjectXLego.PNG" alt="">
+                <img src="images/pully.PNG" alt="">
+                <img src="images/singer.jpg" alt="">
+                <img src="images/snow-boots.jpg" alt="">
+                <img src="images/watch.PNG" alt="">
+            </div>
+            <div class="child-europa"><h2>Europa Rover Design</h2></div>
     </body>
 </html>
