--- a/illustrations.html
+++ b/illustrations.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+    <head lang="English">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <title>Design</title>
+        <link rel="stylesheet" href="css/gallery.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <header>
+            <nav> 
+                <ul class="navlinks">
+                    <li class="navlink"><a href="design.html">Design</a></li>
+                    <li class="navlink"><a href="illustrations.html">Illustrations</a></li>
+                    <li class="navlink"><a href="professional.html">Professional</a></li>
+                    <li class="navlink"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav> 
+        </header>
+        <main>
+            <div class="middler">
+                <h1><a href="index.html">Nick Loeloff</a></h1>
+            </div>
+            <div class="gallery">
+                <img src="images/bat-stony.PNG" alt="">
+                <img src="images/hulk.PNG" alt="">
+                <img src="images/JarrettWF.jpg" alt="">
+                <img src="images/JoeyBaseball.jpg" alt="">
+                <img src="images/NirvanaStylized Drawing.jpg" alt="">
+                <img src="images/quail-brook.PNG" alt="">
+                <img src="images/RICK n morty.jpg" alt="">
+                <img src="images/sketch.PNG" alt="">
+                <img src="images/Spidey_Venom.jpg" alt="">
+                <img src="images/StefDiggs.jpg" alt="">
+                <img src="images/tiger.jpg" alt="">
+                <img src="images/VenomFinished.jpg" alt="">
+                <img src="images/VonnyCovertArtFinal.JPG" alt="">
+                <img src="images/warren-brook.PNG" alt="">
+            </div>
+        </main>
     </body>
 </html>
