--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Nick Loeloff</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>  
         <header>
@@ -25,9 +26,9 @@
             <div class="image-middler">
                 <img src="images/green-guitar.JPG" alt="Silhouette of An Amp Cord">
             </div>
+            <div class ="bottom-middler">
+                &ldquo;Silhouette of the Guitarist&rdquo;<br>
+            </div>
         </main>
-        <footer>
-            <h2>Silhouette of the Guitarist</h2>
-        </footer> 
     </body>
 </html>
