need to finish up contact and professional

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>Design</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
@@ -18,10 +19,10 @@
                 </ul>
             </nav> 
         </header>
-        <main>
             <div class="middler">
-                <h1><a href="index.html">Nick Loeloff</a></h1>
+                <main>
+                    <h1><a href="index.html">Nick Loeloff</a></h1>
+                </main>
             </div>
-        </main>
     </body>
 </html>
