--- a/design.html
+++ b/design.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head lang="English">
+<html lang="en">
+    <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>Design</title>
-        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
@@ -20,19 +20,40 @@
             </nav> 
         </header>
             <div class="middler">
-                <h1><a href="index.html">Nick Loeloff</a></h1>
+                <main>
+                    <h1><a href="index.html">Nick Loeloff</a> Industrial Design</h1>
+                </main>
+                <aside class="image-middler">
+                    <img src="images/Europa.jpg" 
+                        alt="Design of a Europa Moon Rover">
+                    <h2>Europa Moon Rover</h2>
+                    <img src="images/light.png" 
+                        alt="Abstract light fixture inspired by 
+                        and the Ginger Root the characteristics of the Maned Wolf">
+                    <h2>Wolf-Ginger</h2>
+                    <img src="images/link.PNG" 
+                         alt="Laser cut jewerly design fabricated out of wood and thread
+                         inspired by the ivy plant">
+                    <h2>Ivy Necklace</h2>
+                    <img src="images/misc.png" 
+                         alt="Blueprints for various items">
+                    <h2>Blueprints</h2>
+                    <img src="images/ProjectXLego.PNG" 
+                         alt="Scene from the movie Project X but in LEGO">
+                    <h2>LEGO&reg; Project X</h2>
+                    <img src="images/pully.PNG" 
+                         alt="Self-designed and constructed pully system used as a cable pull">
+                    <h2>Tricep/Bicep Cable Pull Machine</h2>
+                    <img src="images/snow-boots.jpg" 
+                         alt="A prototype for snowboots that light up the snow in front of you">
+                    <h2>Snowboot Light Prototype</h2>
+                    <img src="images/watch.PNG" 
+                         alt="Prototype drawing for a watch">
+                    <h2>Watch Prototype</h2>
+                    <img src="images/singer.jpg" 
+                         alt="An advertisement for the watch">
+                    <h2>Watch Prototype Advertisement</h2>
+                </aside>
             </div>
-            <div class="gallery">
-                <img src="images/Europa.jpg" alt="">
-                <img src="images/light.png" alt="">
-                <img src="images/link.PNG" alt="">
-                <img src="images/misc.png" alt="">
-                <img src="images/ProjectXLego.PNG" alt="">
-                <img src="images/pully.PNG" alt="">
-                <img src="images/singer.jpg" alt="">
-                <img src="images/snow-boots.jpg" alt="">
-                <img src="images/watch.PNG" alt="">
-            </div>
-            <div class="child-europa"><h2>Europa Rover Design</h2></div>
     </body>
 </html>
