--- a/illustrations.html
+++ b/illustrations.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head lang="English">
+<html lang="en">
+    <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <title>Design</title>
-        <link rel="stylesheet" href="css/gallery.css">
+        <title>Illustrations</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
@@ -19,26 +19,54 @@
                 </ul>
             </nav> 
         </header>
-        <main>
             <div class="middler">
-                <h1><a href="index.html">Nick Loeloff</a></h1>
+                <main>
+                    <h1><a href="index.html">Nick Loeloff</a> Drawings</h1>
+                </main>
+            <aside class="image-middler">
+                <img src="images/hulk.PNG" 
+                     alt="Black and white sketch of The Incredible Hulk">
+                <h2>The Incredible Hulk</h2>
+                <img src="images/JarrettWF.jpg" 
+                     alt="Drawing of a Wake Forest football player">
+                <h2>Jarrett, #32 for Wake Forest Football</h2>
+                <img src="images/JoeyBaseball.jpg" 
+                     alt="Drawing of a boy in baseball uniform ready to bat">
+                <h2>Cousin Joey Ready to Bat</h2>
+                <img src="images/NirvanaStylized Drawing.jpg" 
+                     alt="Black and white sketch of the band Nirvana">
+                <h2>Nirvana</h2>
+                <img src="images/RICK n morty.jpg" 
+                     alt="Mock drawing of Rick and Morty">
+                <h2>Nick and Kelly</h2>
+                <img src="images/sketch.PNG" 
+                     alt="Black and white sketch of Chris Cornell">
+                <h2>Chris Cornell</h2>
+                <img src="images/Spidey_Venom.jpg" 
+                     alt="Drawing Spider-Man caught by venom">
+                <h2>Venom and Spider-Man</h2>
+                <img src="images/StefDiggs.jpg" 
+                     alt="Drawing of Bills football player Stefon Diggs">
+                <h2>Stefon Diggs</h2>
+                <img src="images/tiger.jpg" 
+                     alt="Drawing of a Tiger in the jungle approaching a stream">
+                <h2>Thirsty Tiger</h2>
+                <img src="images/VenomFinished.jpg" 
+                     alt="Drawing of Venom">
+                <h2>Venom</h2>
+                <img src="images/VonnyCovertArtFinal.JPG" 
+                     alt="Album cover for artist Vonny, shows cartoon safe break in">
+                <h2>Forgotten Memoirs by Vonny</h2>
+                <img src="images/quail-brook.PNG" 
+                     alt="Mural of the logo for Quail Brook">
+                <h2>Quail Brook</h2>
+                <img src="images/bat-stony.PNG" 
+                     alt="Mural of the logo for Spooky Brook">
+                <h2>Spooky Brook</h2>
+                <img src="images/warren-brook.PNG" 
+                     alt="Mural of the logo for Warren Brook">
+                <h2>Warren Brook</h2>
+            </aside>
             </div>
-            <div class="gallery">
-                <img src="images/bat-stony.PNG" alt="">
-                <img src="images/hulk.PNG" alt="">
-                <img src="images/JarrettWF.jpg" alt="">
-                <img src="images/JoeyBaseball.jpg" alt="">
-                <img src="images/NirvanaStylized Drawing.jpg" alt="">
-                <img src="images/quail-brook.PNG" alt="">
-                <img src="images/RICK n morty.jpg" alt="">
-                <img src="images/sketch.PNG" alt="">
-                <img src="images/Spidey_Venom.jpg" alt="">
-                <img src="images/StefDiggs.jpg" alt="">
-                <img src="images/tiger.jpg" alt="">
-                <img src="images/VenomFinished.jpg" alt="">
-                <img src="images/VonnyCovertArtFinal.JPG" alt="">
-                <img src="images/warren-brook.PNG" alt="">
-            </div>
-        </main>
     </body>
 </html>
