--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head lang="English">
+<html lang="en">
+    <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -19,16 +19,16 @@
                 </ul>
             </nav> 
         </header>
-        <main>
             <div class="middler">
-                <h1><a href="index.html">Nick Loeloff</a></h1>
-            </div>
-            <div class="image-middler">
-                <img src="images/green-guitar.JPG" alt="Silhouette of An Amp Cord">
-            </div>
-            <div class ="bottom-middler">
+                <main>
+                    <h1><a href="index.html">Nick Loeloff</a> Portfolio</h1>
+                </main>
+            <aside class="image-middler">
+                <img id ="main-img" src="images/green-guitar.JPG" alt="Silhouette of An Amp Cord">
+            </aside>
+            <aside class ="bottom-middler">
                 &ldquo;Silhouette of the Guitarist&rdquo;<br>
+            </aside>
             </div>
-        </main>
     </body>
 </html>
