--- a/professional.html
+++ b/professional.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>Design</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
@@ -18,10 +19,16 @@
                 </ul>
             </nav> 
         </header>
-        <main>
             <div class="middler">
-                <h1><a href="index.html">Nick Loeloff</a></h1>
+                <main>
+                    <h1><a href="index.html">Nick Loeloff</a> </h1>
+                </main>
+                <aside class="image-middler">
+                    <img src="images/tiger.jpg">
+                    <h2 id ="contact-info">
+                        Nick Loeloff is a third year Industrial Design major.
+                    </h2>
+                </aside>
             </div>
-        </main>
     </body>
 </html>
