--- a/design.html
+++ b/design.html
@@ -4,9 +4,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <title>Design</title>
+        <link rel="shortcut icon" href="images/palm.ico" type="image/x-icon">
+        <title>Industrial Design</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/gallery.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
         <header>
