--- a/illustrations.html
+++ b/illustrations.html
@@ -4,9 +4,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="images/mafia.ico" type="image/x-icon">
         <title>Illustrations</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/gallery.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
         <header>
@@ -33,10 +35,10 @@
                 <img src="images/JoeyBaseball.jpg" 
                      alt="Drawing of a boy in baseball uniform ready to bat">
                 <h2>Cousin Joey Ready to Bat</h2>
-                <img src="images/NirvanaStylized Drawing.jpg" 
+                <img src="images/nirvana.jpg" 
                      alt="Black and white sketch of the band Nirvana">
                 <h2>Nirvana</h2>
-                <img src="images/RICK n morty.jpg" 
+                <img src="images/rickmorty.jpg" 
                      alt="Mock drawing of Rick and Morty">
                 <h2>Nick and Kelly</h2>
                 <img src="images/sketch.PNG" 
