--- a/professional.html
+++ b/professional.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head lang="English">
+<html lang="en">
+    <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <title>Design</title>
+        <link rel="shortcut icon" href="images/lightbulb.ico" type="image/x-icon">
+        <title>About Me</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/gallery.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
         <header>
@@ -21,13 +23,24 @@
         </header>
             <div class="middler">
                 <main>
-                    <h1><a href="index.html">Nick Loeloff</a> </h1>
+                    <h1><a href="index.html">Nick Loeloff</a> About Me</h1>
                 </main>
                 <aside class="image-middler">
-                    <img src="images/tiger.jpg">
+                    <img src="images/nick.jpg"
+                        alt="Black and white sketch of Nick Loeloff">
                     <h2 id ="contact-info">
-                        Nick Loeloff is a third year Industrial Design major.
+                        Nick Loeloff is a third year Industrial Design major. He is proficient in 
+                        Adobe Photoshop, Illustrator, and InDesign, Rhino 7, Keyshot 9, and drawing
+                        and painting. He has had professional experience as a freelance artist for 
+                        Mirror Sound LLC, completing 4 commisioned murals for Somerset County Golf
+                        Courses NJ, and also was a graphic design intern for Pro Sports Outlook in 
+                        Falls Church VA. 
                     </h2>
+                    <h3>
+                        More art <a href="https://www.instagram.com/some.art.bynickloeloff/"
+                        target="_blank">
+                        @some.art.bynickloeloff</a>
+                    </h3>
                 </aside>
             </div>
     </body>
